# rag-kg-llm

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  test.py
mineru-tianshu/: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_EN.md  docker-compose.dev.yml  docker-compose.yml  mcp_config.example.json  pyproject.toml
mineru-tianshu/.github/workflows/: pylint.yml
mineru-tianshu/backend/: .env.example  Dockerfile  README.md  __init__.py  api_server.py  install.sh  litserve_worker.py  mcp_server.py  requirements.txt  start_all.py  task_db.py  task_scheduler.py
mineru-tianshu/backend/audio_engines/: README.md  __init__.py  sensevoice_engine.py
mineru-tianshu/backend/auth/: __init__.py  auth_db.py  dependencies.py  jwt_handler.py  models.py  routes.py  sso.py
mineru-tianshu/backend/format_engines/: __init__.py  base.py  fasta_engine.py  genbank_engine.py  i18n.py
mineru-tianshu/backend/paddleocr_vl/: .structure  README.md  __init__.py  engine.py
mineru-tianshu/backend/remove_watermark/: README.md  README_EN.md  __init__.py  pdf_watermark_handler.py  watermark_remover.py
mineru-tianshu/backend/utils/: __init__.py  pdf_utils.py
mineru-tianshu/backend/video_engines/: README.md  __init__.py  (+2 more)
mineru-tianshu/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
mineru-tianshu/scripts/: DOCKER_QUICK_START.txt  docker-commands.sh  docker-entrypoint.sh  docker-setup.bat  docker-setup.sh
(+191 files in other folders)
